# whoskicking

./: .dockerignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  main.py  models.py  nfl_api.py  pyproject.toml  whoskicking.db
app/: __init__.py  models.py  routes.py  services.py  tasks.py
app/api_clients/: espn_client.py
app/templates/: index.html
scripts/: seed_teams.py
static/js/: app.js
templates/: index.html
